--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,8 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime",["import", {
+  // "transform-runtime"
+  "plugins": ["transform-vue-jsx",["import", {
     "libraryName": "vant",
     "libraryDirectory": "es",
     "style": true
