--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@vant/weapp": "^1.9.2",
     "amfe-flexible": "^2.2.1",
     "clipboard": "^2.0.8",
